--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start": "live-server"
   },
   "dependencies": {
+    "angular": "^1.6",
+    "angular-route": "^1.7.0",
     "bootstrap": "^4.0.0-alpha.2",
-    "lodash": "^4.6.1",
-    "angular": "^1.6"
+    "lodash": "^4.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.2",
